# car-rental

./: CMakeLists.txt  main.cpp
include/model/: Address.h  Client.h  Rent.h  Vehicle.h
src/model/: Address.cpp  Client.cpp  Rent.cpp  Vehicle.cpp
test/: ClientTest.cpp  master.cpp
